--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-      <section>
+      <section id="seccion-inicio-pagina">
         <form>
 
           <div>
@@ -41,11 +41,12 @@
             <input type="text" placeholder="Nombre tarjeta" id="nombreTarjetaR">
             <input type="text" placeholder="Vencimiento tarjeta" id="vencimientoTarjetaR">
             <input type="text" placeholder="Codigo de seguridad" id="codigoTarjetaR">
-            <input type="submit" value="Enviar">
+            <p id="texto-fallido"></p>
+            <button id="enviar-reg">Enviar</button>
           </section>
 
           <section class="botones">
-            <button>Iniciar sesión</button>
+            <button id="btnInicioSesion">Iniciar sesión</button>
             <button id="btnRegistro">Registrarse</button>
           </section>
 
