--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           </div>
           
           <section class="inicio">
-            <input type="text" placeholder="Usuario">
-            <input type="text" placeholder="Contraseña">
+            <input type="text" placeholder="Usuario" id="usuarioEntrada">
+            <input type="text" placeholder="Contraseña" id="contraseñaEntrada">
+            <p id="texto-fallido-ingreso"></p>
           </section>
   
           <section class="inicio-disable" id="form-registro">
